# hugo-blog-app

./: README.md  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
script/: build.sh
src/blog_app/: __main__.py  app.py  editor.py  example.py
